# emby-episode-organizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-build.yml
.sisyphus/evidence/: task-1-repo-init.txt  task-10-emby-client.txt  task-11-mover.txt  task-12-settings-service.txt  task-13-files-service.txt  task-14-settings-api.txt  task-15-emby-api.txt  task-16-libraries-api.txt  task-17-series-api.txt  task-7-nfo.txt  (+14 more)
backend/: README.md  mypy.ini  pyproject.toml  ruff.toml
backend/app/: __init__.py  config.py  logging_config.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  emby.py  files.py  libraries.py  series.py  settings.py  tasks.py
backend/app/db/: __init__.py  init_db.py  models.py
backend/app/schemas/: __init__.py  library.py  series.py  task.py
backend/app/services/: __init__.py  cover.py  emby.py  files.py  mover.py  nfo.py  settings.py
backend/app/utils/: __init__.py  filename.py  naming.py  path_security.py
backend/tests/: test_cover.py  test_emby_client.py  test_filename.py  test_files_service.py  test_health.py  test_logging_config.py  test_models.py  test_mover.py  test_naming.py  test_nfo.py  test_path_security.py  test_settings_service.py
backend/tests/api/: __init__.py  test_emby_api.py  test_files_api.py  test_libraries_api.py  test_series_api.py  test_settings_api.py  test_tasks_api.py
frontend/: .env.production  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
(+47 files in other folders)
